# market-tickers

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md  Test Code.py  pyproject.toml
market_tickers/: __init__.py  core.py  loaders.py  updater.py
market_tickers.egg-info/: PKG-INFO  SOURCES.txt
market_tickers/data/currencies/: currencies.csv
market_tickers/data/etfs/: etfs.csv
market_tickers/data/indices/: indices.csv  indices_global.csv  indices_india.csv  indices_usa.csv
market_tickers/data/stocks/: stocks_brazil.csv  stocks_canada.csv  stocks_france.csv  stocks_germany.csv  stocks_india.csv  stocks_united_kingdom.csv  stocks_usa.csv  usa_stocks.csv
market_tickers/data/stocks/new_data/: new_stocks_data.xlsx
tests/: test_batch.py  test_core.py  test_countries.py  test_currency_etf.py  test_fuzzy.py  test_indices.py  test_search.py
