[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "market-tickers"
version = "0.4.1"
description = "Human-friendly stock, index, ETF and currency names to Yahoo Finance tickers — with auto-update"
authors = [{ name = "Vedant Wade" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "pandas>=1.3",
    "openpyxl>=3.0",
]

[project.optional-dependencies]
updater = ["yfinance>=0.2", "requests>=2.28"]
dev     = ["pytest>=7.0", "yfinance>=0.2", "requests>=2.28"]

[project.urls]
Homepage = "https://github.com/Pr3sencX/market-tickers"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
market_tickers = [
    "data/**/*.csv",
    "data/**/*.xlsx",
]
